--- a/WaterTank-2/WaterTankTrial/Debug/Makefile
+++ b/WaterTank-2/WaterTankTrial/Debug/Makefile
@@ -42,7 +42,8 @@ C_SRCS +=  \
 ../i2c.c \
 ../lcd.c \
 ../main.c \
-../servo.c
+../servo.c \
+../twi.c
 
 
 PREPROCESSING_SRCS += 
@@ -57,7 +58,8 @@ hc-sr04.o \
 i2c.o \
 lcd.o \
 main.o \
-servo.o
+servo.o \
+twi.o
 
 OBJS_AS_ARGS +=  \
 gpio.o \
@@ -65,7 +67,8 @@ hc-sr04.o \
 i2c.o \
 lcd.o \
 main.o \
-servo.o
+servo.o \
+twi.o
 
 C_DEPS +=  \
 gpio.d \
@@ -73,7 +76,8 @@ hc-sr04.d \
 i2c.d \
 lcd.d \
 main.d \
-servo.d
+servo.d \
+twi.d
 
 C_DEPS_AS_ARGS +=  \
 gpio.d \
@@ -81,7 +85,8 @@ hc-sr04.d \
 i2c.d \
 lcd.d \
 main.d \
-servo.d
+servo.d \
+twi.d
 
 OUTPUT_FILE_PATH +=WaterTankTrial.elf
 
@@ -133,6 +138,13 @@ LINKER_SCRIPT_DEP+=
 	
 
 ./servo.o: .././servo.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)E:\Programas Uni\ATMEL\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"E:\Programas Uni\ATMEL\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "E:\Programas Uni\ATMEL\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./twi.o: .././twi.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)E:\Programas Uni\ATMEL\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"E:\Programas Uni\ATMEL\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "E:\Programas Uni\ATMEL\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
